2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c (main): Drop the "II" from the window title.

	* gnobots2.desktop.in: Update name to fit HIG (bug 116916).

2003-07-02  Callum McKenzie <callum@physics.otago.ac.nz>
        * Makefile.am: Build fixes.

2003-06-24  William Jon McCann  <mccann@jhu.edu>

	* statusbar.c (gnobots_statusbar_set_remaining) 
	(gnobots_statusbar_set_score, gnobots_statusbar_set_level) 
	(gnobots_statusbar_set_safe_teleports):
	* menu.c (update_score_state): 
	* game.c (show_scores): 
	(log_score): Don't use fixed length buffer for
	strings that may come from the user or gconf.

2003-06-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: Removed dead code.

	* keyboard.c (keyboard_cb): Removed the comment asking "what is
	this for" since it is now clear. It is so we don't try and
	interpret accelerators like Ctrl-N as just 'N'. I've limited the
	mask so we hopefully don't have the old problems.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots2.schemas.in: Typo. (Fixes bug 115693.)

2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am: 
	* gnobots2.schemas.in: Added schemas.in.

	* cows.png:
	* eggs.png:
	* gnomes.png:
	* mice.png:
	* robots.png:
	* windows.png: Made background transparent.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* properties.h: 
	* properties.c: Removed icon theme draw area.  After
	the pref became instant apply it wasn't needed.
	Added background color configuration.

	* graphics.h:
	* graphics.c: Convert to use pixbufs.  This will allow
	us to use image themes with transparency and be able to
	easily scale the images.  Added the ability to configure
	the background color like the other games.

	* gameconfig.c (load_game_configs): 
	* graphics.c (load_game_graphics): Use glib file utilities
	and don't make so many assumptions about filenames (like
	don't assume there are no periods).
	(load_bubble_graphics): Use g_build_filename.
