@@ -1,3 +1,8 @@
+2003-07-28  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* properties.c: Finally make the key-control entry dialog usable
+	via the keyboard. Fixes bug 97327.
+
 2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnobots.c (main): Drop the "II" from the window title.
